[package]
name = "thief-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["derive", "signature", "flags"]}
once_cell = "1.18.0"
spinning_top = "0.2.5"

[lib]
crate-type = ["cdylib"]
